# caml

./: .gitignore  .rubocop.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gemfile  LICENSE  README.md  caml.gemspec  caml.yaml  index.html  index.md
.claude/agents/: ci-diagnose.md
.claude/commands/: giddy-up.md
.claude/rules/: commits.md  design-principles.md  security.md  tests.md
.claude/skills/implement-change/: SKILL.md
guide/: index.html
lib/: caml.rb
lib/caml/: argument.rb  caml.rb  cli.rb  config.rb  init.rb  interpolation.rb  option.rb  plan.rb  runner.rb  shell.rb  task.rb  version.rb
spec/: spec_helper.rb
spec/caml/: argument_spec.rb  caml_spec.rb  cli_phase2_spec.rb  cli_spec.rb  config_phase2_spec.rb  config_phase3_spec.rb  config_phase4_spec.rb  config_spec.rb  init_spec.rb  interpolation_spec.rb  option_spec.rb  plan_spec.rb  runner_phase2_spec.rb  runner_phase3_spec.rb  runner_spec.rb  task_spec.rb  version_spec.rb
spec/fixtures/: feature_rich.yaml  malformed.yaml  simple.yaml  with_needs.yaml  with_ruby_object.yaml
spec/support/: fake_shell.rb  runner_spy.rb
src/: basic.rs  lib.rs  main.rs
src/caml/: config.rs
