[package]
name = "caml"
version = "0.1.1"
authors = ["Ian Johnson <tacoda@hey.com>"]
edition = "2018"
license = "MIT"
description = "A dynamic CLI tool defined with declarative YAML"
readme = "README.md"
homepage = "https://tacoda.dev/caml"
repository = "https://github.com/tacoda/caml"
keyworks = ["cli", "yaml", "dynamic"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
