[package]
name = "caml"
version = "0.1.2"
authors = ["Ian Johnson <tacoda@hey.com>"]
edition = "2018"
license = "MIT"
description = "A dynamic CLI tool defined with declarative YAML"
readme = "README.md"
homepage = "https://tacoda.dev/caml"
repository = "https://github.com/tacoda/caml"
keywords = ["cli", "yaml", "dynamic"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
